<resources>
    <string name="app_name">WeatherForecast</string>
    <string name="prikazi">Prikazi</string>
    <string name="Lokacija">Lokacija: </string>
    <string name="Unosgrada">Unesite zeljeni grad</string>
    <string name="temperatura">Temperatura</string>
    <string name="Izlazak">Izlazak i zalazak sunca</string>
    <string name="Vetar">Vetar</string>
    <string name="Temperatura">Temperatura: 11</string>
    <string name="Vlaznost">Vlaznost: 44</string>
    <string name="Pritisak">Pritisak: 1000</string>
    <string name="Izaberite">Izaberite jedinicu: </string>
    <string name="Izlazaksunca">Izlazak sunca: 6:45</string>
    <string name="Zalazaksunca">Zalazak sunca: 8:15</string>
    <string name="BrzinaVetra">Brzina vetra: 4.1</string>
    <string name="Pravac">Pravac" N</string>
    <string name="UnesiteTekst">Unesite tekst</string>
    <string name="DodajGad">Dodaj grad</string>
    <string name="textViewDetailsDate">Datum</string>
    <string name="textViewDetailsLastUpdated">Last updated</string>
    <string name="textViewDetailsStats">Statistics</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="textViewStatsLastWeek">Prosla nedelja:</string>
    <string name="last_week">Prosla nedelja:</string>
    <string name="week_day">Week day:</string>
    <string name="temperature">Temperatura:</string>
    <string name="pressure">Pritisak:</string>
    <string name="humidity">Vlaznost:</string>
    <string name="monday">Ponedeljak</string>
    <string name="tuesday">Utorak</string>
    <string name="wednesday">Sreda</string>
    <string name="thursday">Cetvrtak</string>
    <string name="friday">Petak</string>
    <string name="min_temperature">Min temperatura:</string>
    <string name="max_temperature">Maks temperatura:</string>
    <string name="saturday">Subota</string>
    <string name="sunday">Nedelja</string>
</resources>