<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/backgroundColor1"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10.5"
    tools:context=".StatisticsActivity">

    <TextView
        android:id="@+id/textViewStatsCity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginBottom="10dp"
        android:fontFamily="monospace"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="20dp"
        android:fontFamily="monospace"
        android:text="@string/last_week"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="start"
            android:text="@string/week_day"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="end"
            android:text="@string/temperature"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="end"
            android:text="@string/pressure"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="end"
            android:text="@string/humidity"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/listViewStatsBasic"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_marginBottom="10dp"
        android:divider="@null"
        android:dividerHeight="0dp">

    </ListView>

    <ListView
        android:id="@+id/listViewStatsExtremes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:divider="@null"
        android:dividerHeight="0dp">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton

            android:id="@+id/imageButtonStatsSun"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:background="?android:selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_sunny" />

        <ImageButton
            android:id="@+id/imageButtonStatsSnowflake"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:background="?android:selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_snowflake" />
    </LinearLayout>
</LinearLayout>